src/pages/new.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

@import url("../lib/fancytree/skin-win8/ui.fancytree.min.css");
@import url("../style/dialog.css");
@import url("../style/lightbox.css");
@import url("../style/clippingTree.css");
@import url("../style/clippingLabelPicker.css");


:root {
    --color-bkgd: #f0f0f0;
    --color-preview-bkgd: #ededf0;
    --color-btn-expand-bkgd: #e0e0e1;
    --color-btn-expand-hover-bkgd: #d7d7db;
    --color-btn-expand-active-bkgd: #c9c9ca;
    --color-fldr-tree-popup-bkgd: #fbfbfb;
    --color-fldr-tree-popup-border: #b1b1b1;
    --color-fldr-tree-popup-shadow: #8f8f8f;
    --color-fldr-tree-popup-shadow-darker: #555555;
    --color-dlg-mac-btn-shadow: #e3e3e3;
    --url-icon-synced-clippings-fldr: url("../img/synced-clippings.svg");
    --url-collapsed-icon: url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSIxNiIgaGVpZ2h0PSIxNiIgdmVyc2lvbj0iMS4xIiB2aWV3Qm94PSIwIDAgMTYgMTYiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+IDxwYXRoIGQ9Im04IDUtNSA1IDEgMSA0LTQgNCA0IDEtMXoiIGZpbGw9IiM2YTZhNmEiLz48L3N2Zz4K");
}

@media (prefers-color-scheme: dark) {
    :root {
	--color-bkgd: #2a2a2e;
	--color-preview-bkgd: #4a4a4f;
	--color-btn-expand-bkgd: #4a4a4f;
	--color-btn-expand-hover-bkgd: #737373;
	--color-btn-expand-active-bkgd: #808080;
	--color-fldr-tree-popup-bkgd: #202023;
	--color-fldr-tree-popup-border: #737373;
	--color-fldr-tree-popup-shadow: #2a2a2e;
	--color-fldr-tree-popup-shadow-darker: #2a2a2e;
	--color-dlg-mac-btn-shadow: var(--color-mac-btn-shadow);
	--url-icon-synced-clippings-fldr: url("../img/synced-clippings-dk.svg");
	--url-collapsed-icon: url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSIxNiIgaGVpZ2h0PSIxNiIgdmVyc2lvbj0iMS4xIiB2aWV3Qm94PSIwIDAgMTYgMTYiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+IDxwYXRoIGQ9Im04IDUtNSA1IDEgMSA0LTQgNCA0IDEtMXoiIGZpbGw9InJnYigyMzcsMjM3LDI0MCkiLz48L3N2Zz4K");
    }
}


body {
    background-color: var(--color-bkgd);
}

label {
    margin-right: 4px;
}

input[type="text"] {
    height: 24px;
}


input[type="text"], textarea, select {
    margin-bottom: 12px !important;
}

input[type="text"], textarea {
    width: 100%;
    margin-top: 4px;
    font: message-box;
    font-size: 13px;
}

textarea {
    resize: none;
}

body[data-laf="true"][data-os="mac"] select.browser-style {
    height: 22px;
}

body[data-os="mac"] button:not(.ae-button):not(.toolbar-button),
body[data-os="mac"] button.default:not(.ae-button):not(.toolbar-button),
body[data-os="mac"][data-laf="true"] select.browser-style {
    box-shadow: 0px 1px 2px 0px var(--color-dlg-mac-btn-shadow);
}

body[data-os="mac"] .lightbox button:not(.ae-button):not(.toolbar-button),
body[data-os="mac"] .lightbox button.default:not(.ae-button):not(.toolbar-button) {
    box-shadow: 0px 1px 2px 0px var(--color-mac-btn-shadow);
}

input[type="checkbox"] + label {
    margin-left: 1px;
    vertical-align: 0;
}

body[data-os="win"] input[type="checkbox"] + label,
body[data-os="linux"]:not([data-laf="true"]) input[type="checkbox"] + label {
    vertical-align: 2.5px;
}

#new-clipping-fldr-tree-btn {
    order: 1;
}

.folder-picker {
    margin-top: 4px;
}

/* Styling for the folder picker drop-down menu and New Folder button. */
.ae-button {
    border: 1px solid var(--color-btn-border);
    border-radius: 3px;
    background-color: var(--color-btn-bkgd);
    color: var(--color-btn-text);
}

.ae-button:hover {
    background-color: var(--color-btn-hover-bkgd);
}

.ae-button:active {
    background-color: var(--color-btn-active-bkgd);
}

.folder-picker-menubtn {
    width: 100%;
    padding: 4px 4px 4px 28px;
    border-radius: 0;
    background-image: var(--url-dropdown-arrow), url("../img/folder.svg");
    background-position: calc(100% - 4px) center, 8px;
    background-repeat: no-repeat;
    font: caption !important;
    text-align: start !important;
}

.folder-picker-menubtn[value="0"] {
    background-image: var(--url-dropdown-arrow), url("../img/clippings-root.svg");
    background-position: calc(100% - 4px) center, 8px;
    background-repeat: no-repeat;
}

.folder-picker-menubtn[syncfldr] {
    background-image: var(--url-dropdown-arrow), var(--url-icon-synced-clippings-fldr);
    background-position: calc(100% - 4px) center, 8px;
    background-repeat: no-repeat;
}

.popup-bkgrd {
    display: none;
    position: absolute;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
    background-color: var(--color-fldr-tree-popup-bkgd);
    z-index: 1003;
    opacity: 0;
}

.folder-tree-popup {
    position: absolute;
    visibility: hidden;
    border: 1px solid var(--color-fldr-tree-popup-border);
    background-color: var(--color-fldr-tree-popup-bkgd);
    box-shadow: 4px 4px 2px -2px var(--color-fldr-tree-popup-shadow);
    z-index: 1100;
}

#new-clipping-fldr-tree-popup {
    bottom: 10px;
    left: 16px;
    width: 350px;
    height: 151px;
    margin-top: 0;
}

#new-folder-dlg-fldr-tree-popup {
    box-shadow: 4px 4px 2px -2px var(--color-fldr-tree-popup-shadow-darker);
}

/* This class to be applied to the folder tree popup if the clipping options
/* is expanded. */
.new-clipping-fldr-tree-popup-fixpos {
    bottom: unset !important;
}

.folder-tree {
    height: 100%;
    overflow: auto;
}

.folder-tree .ae-synced-clippings-fldr > .fancytree-icon {
    background-image: var(--url-icon-synced-clippings-fldr);
}

ul.fancytree-container {
    border: none;
}

#new-folder-btn {
    order: 2;
    
    min-width: 32px;
    margin: 0 0 0 4px;
    background-image: url("../img/newFolder.svg");
    background-position: center;
    background-repeat: no-repeat;
}

#clipping-options-groupbox {
    padding-right: 0;
}

#clipping-options-groupbox > legend {
    padding-left: 8px;
    margin-left: 16px;
}

#clipping-options {
    display: none;
    margin-top: 4px;
    margin-bottom: 8px;
    margin-left: 26px;
}

#btn-expand-options {
    position: relative;
    top: -24px;
    left: -10px;
    float: left;

    min-width: 26px;
    min-height: 24px;

    background-color: var(--color-btn-expand-bkgd);
    background-image: var(--url-dropdown-arrow);
    background-position: calc(100% - 4px) center;
    background-repeat: no-repeat;
}

#btn-expand-options.expanded {
    background-image: var(--url-collapsed-icon);
}

#btn-expand-options:hover {
    background-color: var(--color-btn-expand-hover-bkgd);
}

#btn-expand-options:active {
    background-color: var(--color-btn-expand-active-bkgd);
}

#clipping-options,
#clipping-options button,
#clipping-options select {
    font-size: 12px;
}

body[data-locale="uk"] #show-preview {
    letter-spacing: -0.75px;
}

body[data-locale="uk"] #create-as-unquoted + label,
body[data-locale="uk"] #remove-extra-linebreaks + label {
    letter-spacing: -0.75px;
}

#clipping-options #shct-key-and-label-opts {
    margin-top: 10px;
}

#clipping-options #shortcut-key-select {
    order: 1;
    flex: 0 1 auto;
}

#clipping-options #clipping-options-spacer {
    order: 2;
    flex: 1 1 auto;
}

#clipping-options #clipping-label {
    order: 3;
    flex: 0 1 auto;
}

#clipping-key {
    margin-right: 4px;
}

#shct-key-tooltip {
    vertical-align: middle;
}

#preview-cntr {
    float: right;
}

body[data-locale="uk"] #clipping-key-lbl,
body[data-locale="uk"] #clipping-label-picker-lbl,
body[data-locale|="pt"] #clipping-key-lbl,
body[data-locale|="pt"] #clipping-label-picker-lbl,
body[data-locale|="es"] #clipping-key-lbl,
body[data-locale|="es"] #clipping-label-picker-lbl {
    display: block;
    margin-bottom: 4px;
}

body[data-locale="fr"] #clipping-key-lbl,
body[data-locale="fr"] #clipping-label-picker-lbl,
body[data-locale="de"] #clipping-key-lbl,
body[data-locale="de"] #clipping-label-picker-lbl {
    letter-spacing: -0.5px;
}

body:not([data-locale="uk"]):not([data-locale|="pt"]):not([data-locale|="es"]) #clipping-key {
    width: 78px;
}

body:not([data-locale="uk"]):not([data-locale|="pt"]):not([data-locale|="es"]) #clipping-label-picker {
    width: 86px;
}

#dlg-buttons {
    z-index: 1;
}

#new-folder-dlg {
    --width: 324px;
    --height: 176px;
    top: 64px;
}

#new-folder-dlg button,
#new-folder-dlg input[type="text"] {
    font-size: 12px !important;
}

#new-folder-dlg-fldr-tree {
    margin-top: 0;
}

#new-folder-dlg-fldr-tree-popup {
    width: 290px;
    height: 160px;
    margin-top: 0;
    z-index: 1101;
}

#preview-dlg {
    --width: 390px;
    --height: 375px;
    top: 20px;
}

#preview-dlg > #clipping-preview {
    height: 282px;
    padding: 8px;
    border: 0;
    background-color: var(--color-preview-bkgd);
}

#create-clipping-error-msgbox {
    --width: 390px;
    --height: 150px;
    top: 64px;
}

#create-clipping-error-msgbox .msgbox-error-icon {
    float: left;
    width: 34px;
    height: 34px;
    margin-top: 0;
    margin-right: 12px;
    background-image: url("../img/warning-64.png");
    background-size: contain;
}

#create-clipping-error-msgbox .msgbox-error-icon[os="mac"] {
    background-image: url("../img/warning-64-mac.png");
}

#create-clipping-error-msgbox .msgbox-error-msg {
    margin-left: 44px;
    color: var(--color-error-text);
}

